<resources>
    <string name="app_name">ViPiki</string>
    <string name="no_user_input">Заполните поля</string>
    <string name="command">Команда</string>
    <string name="postulate_command">Быть дружной и амбициозной командой, любящей свое дело!</string>
    <string name="welcome_new_user">Добро пожаловать в приложение!</string>
    <string name="agreement">Чтобы продолжить,
    нужно заполнить вводные данные. Готовы?</string>
    <string name="exit">Выход</string>
    <string name="save">Сохранить</string>
    <string name="next">Дальше</string>
    <string name="dateOfEmployment">Дата трудоустройства</string>
    <string name="scheduleOfWork">График работы</string>
    <string name="post">Должность</string>
    <string name="allocation">Размещение</string>
    <string name="selection">Отбор</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_main">Главная</string>
    <string name="title_add_picks">Добавить</string>
    <string name="title_menu">Меню</string>
    <string name="average_income">Средний доход в месяц</string>
    <string name="tax">Ставка</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="extraShift">Доп смена</string>
    <string name="default_number_picks">0</string>
    <string name="default_pay">0,00</string>
    <string name="selection_os">Отбор основа</string>
    <string name="allocation_os">Размещение основа</string>
    <string name="selection_mez">Отбор мезонин</string>
    <string name="allocation_mez">Размещение мезонин</string>
    <string name="back">Назад</string>
    <string name="hint_name">Ваше имя</string>
    <string name="name">Имя</string>
    <string name="profileName">Имя:</string>
    <string name="exampleName">Александр</string>
    <string name="hint_date">17.04.2001</string>
    <string name="phone">Телефон</string>
    <string name="hint_phone">8 999 236 55 36</string>
    <string name="email">Почта</string>
    <string name="hint_email">Введите почту</string>
    <string name="password">Пароль</string>
    <string name="hint_password">Введите пароль</string>
    <string name="hint_not_see_password">********</string>
    <string name="sector">Сектор</string>
    <string name="salary">Зарплата</string>
    <string name="register">Регистрация</string>
    <string name="confirm_register">Зарегистрироваться</string>
    <string name="auth">Вход</string>
    <string name="confirm_auth">Авторизоваться</string>
    <string name="editProfile">Редактировать профиль</string>
    <string name="editBonuses">Изменить премию</string>
    <string name="editTaxes">Изменить ставку</string>
    <string name="bonus">Премия</string>
    <string name="bonus80">80%</string>
    <string name="bonus90">90%</string>
    <string name="bonus100">100%</string>
    <string name="bonus120">120%</string>
    <string name="uid">UID</string>
    <string name="salaryByCurrentMonth">ЗП за текущий месяц</string>
    <string name="averageMonthSalary">Средняя зп за месяц</string>
    <string name="yearNormSalary">Годовая ЗП по норме</string>
    <string name="yearRealSalary">Ожидаемая ЗП за год</string>
    <string name="update">Обновить</string>
    <string name="userProfile">Профиль</string>
    <string name="addPicks">Выберите дату, чтобы добавить смену</string>
    <string name="syncData">Синхронизовать</string>
    <string name="recoverData">Восстановить данные</string>
    <string name="changePassword">Сменить пароль</string>
    <string name="changeEmail">Сменить почту</string>
    <string name="enter_current_password">Введите текущий пароль</string>
    <string name="enterNewPassword">Введите новый пароль</string>
    <string name="confirmPassord">Подтвердите пароль</string>
    <string name="enterNewEmail">Введите новую почту</string>
    <string name="confirmEmail">Подтвердите почту</string>
    <string name="hint_email_example">address@mail.ru</string>
    <string name="hint_enter_email_again">Введите почту еще раз</string>
    <string name="enter_old_password">Введите старый пароль</string>
</resources>