<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:id="@+id/settingsRootLayout"
    tools:context=".ui.settings.SettingsActivity">

    <TextView
        android:id="@+id/editProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/editProfile" />
    <TextView
        android:id="@+id/editBonusesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfileTextView"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/editBonuses" />
    <TextView
        android:id="@+id/editTaxesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBonusesTextView"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/editTaxes" />
    <TextView
        android:id="@+id/syncDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTaxesTextView"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/syncData" />
    <TextView
        android:id="@+id/recoverDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/syncDataTextView"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/recoverData" />

    <TextView
        android:id="@+id/changePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recoverDataTextView"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/changePassword" />

    <TextView
        android:id="@+id/changeEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePasswordTextView"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/changeEmail" />
</RelativeLayout>