<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.statistic.StatisticActivity"
    android:id="@+id/rootRelativeLayout">

    <TextView
        android:id="@+id/userDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/archivo_black"
        android:textSize="26sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/userProfile" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/userDataTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/nameTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/postTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/nameTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/post" />
    <TextView
        android:id="@+id/userPostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userNameTextView"
        android:layout_alignBottom="@+id/postTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/post" />
    <TextView
        android:id="@+id/scheduleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/postTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/scheduleOfWork" />
    <TextView
        android:id="@+id/userScheduleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userPostTextView"
        android:layout_alignBottom="@+id/scheduleTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/scheduleOfWork" />
    <TextView
        android:id="@+id/sectorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/scheduleTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/sector" />
    <TextView
        android:id="@+id/userSectorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/userScheduleTextView"
        android:layout_alignBottom="@+id/sectorTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/sector" />

    <TextView
        android:id="@+id/taxesTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/sectorTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="26sp"
        android:text="@string/tax" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taxesRelativeLayout"
        android:layout_below="@id/taxesTitleTextView"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/selectionOsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/archivo_black"
            android:layout_marginEnd="80dp"
            android:textSize="20sp"
            android:text="@string/selection_os" />
        <TextView
            android:id="@+id/taxSelectionOsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/selectionOsTextView"
            android:fontFamily="@font/archivo_black"
            android:textSize="20sp"
            android:text="@string/default_pay" />
        <TextView
            android:id="@+id/allocationOsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/selectionOsTextView"
            android:fontFamily="@font/archivo_black"
            android:layout_marginEnd="80dp"
            android:textSize="20sp"
            android:text="@string/allocation_os" />
        <TextView
            android:id="@+id/taxAllocationOsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/allocationOsTextView"
            android:layout_below="@id/taxSelectionOsTextView"
            android:fontFamily="@font/archivo_black"
            android:textSize="20sp"
            android:text="@string/default_pay" />
        <TextView
            android:id="@+id/selectionMezTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/allocationOsTextView"
            android:fontFamily="@font/archivo_black"
            android:layout_marginEnd="80dp"
            android:textSize="20sp"
            android:text="@string/selection_mez" />
        <TextView
            android:id="@+id/taxSelectionMezTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/selectionMezTextView"
            android:layout_below="@id/taxAllocationOsTextView"
            android:fontFamily="@font/archivo_black"
            android:textSize="20sp"
            android:text="@string/default_pay" />
        <TextView
            android:id="@+id/allocationMezTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/selectionMezTextView"
            android:fontFamily="@font/archivo_black"
            android:layout_marginEnd="80dp"
            android:textSize="20sp"
            android:text="@string/allocation_mez" />
        <TextView
            android:id="@+id/taxAllocationMezTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/allocationMezTextView"
            android:layout_below="@id/taxSelectionMezTextView"
            android:fontFamily="@font/archivo_black"
            android:textSize="20sp"
            android:text="@string/default_pay" />
    </RelativeLayout>

    <TextView
        android:id="@+id/bonusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/taxesRelativeLayout"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/archivo_black"
        android:textSize="26sp"
        android:text="@string/bonus"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bonusTextView"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/bonusRadioGroup">
        <RadioButton
            android:id="@+id/bonus120_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/bonus120"/>
        <RadioButton
            android:id="@+id/bonus100_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/bonus100"/>
        <RadioButton
            android:id="@+id/bonus90_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/bonus90"/>
        <RadioButton
            android:id="@+id/bonus80_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonus80"/>
    </RadioGroup>

    <TextView
        android:id="@+id/salaryMonthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:layout_below="@id/bonusRadioGroup"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/salaryByCurrentMonth" />

    <TextView
        android:id="@+id/userMonthSalaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/bonusRadioGroup"
        android:layout_alignBottom="@+id/salaryMonthTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/default_pay" />

    <TextView
        android:id="@+id/yearRealSalaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/salaryMonthTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/yearRealSalary" />

    <TextView
        android:id="@+id/userRealYearSalaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/userMonthSalaryTextView"
        android:layout_alignBottom="@+id/yearRealSalaryTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/default_pay" />

    <TextView
        android:id="@+id/yearNormSalaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/yearRealSalaryTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/yearNormSalary" />

    <TextView
        android:id="@+id/userNormYearSalaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/userRealYearSalaryTextView"
        android:layout_alignBottom="@+id/yearNormSalaryTextView"
        android:fontFamily="@font/archivo_black"
        android:textSize="20sp"
        android:text="@string/default_pay" />

</RelativeLayout>