<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TextView
            android:id="@+id/textViewCurrentPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/enter_current_password" />

        <EditText
            android:id="@+id/editTextCurrentUserPassword"
            android:layout_below="@id/textViewCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/hint_not_see_password"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/archivo_black"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewUserEmail"
            android:layout_below="@id/editTextCurrentUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/enterNewEmail" />

        <EditText
            android:id="@+id/editTextUserEmail"
            android:layout_below="@id/textViewUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email_example"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/archivo_black"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>